--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "http://tcaruso.com" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: @astronomiseer
+twitter_username: astronomiseer
 github_username: tomplex
 
 # Build settings
