--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ github_username: tomplex
 
 # Build settings
 markdown: kramdown
-theme: jekyll-theme-minimal
+theme: minima
 plugins:
   - jekyll-feed
 
