--- a/_data/index/education.yml
+++ b/_data/index/education.yml
@@ -1,8 +1,11 @@
-- name: Massachusets Instutite of Technology
-  link: http://web.mit.edu/
-  date: 2011 - <i class="fa fa-clock-o" aria-hidden="true" title="Until Now"></i>
-  descr: <br> (expected graduation in 2019)
+- name: SUNY Albany - GIS Certification
+  link:
+  date: 2015
 
-- name: Harvard
-  link: http://www.harvard.edu/
-  date: 2007 - 2011
+- name: SUNY Albany - B.S. Physics
+  link:
+  date: 2011 - 2014
+
+- name: College of Saint Rose (Partial degree)
+  link:
+  date: 2009-2011
