--- a/_data/index/skills.yml
+++ b/_data/index/skills.yml
@@ -2,5 +2,5 @@
 
 label: Ability
 id : cs
-aspects: Motivation, GitHub, Java, HTML/CSS, Docker, Python
-percentage: 100, 65, 70, 60, 60, 55
+aspects: PostgreSQL, PostGIS, RabbitMQ, Go, Docker, Python, Bash/ZSH
+percentage: 80, 65, 45, 25, 65, 70, 50
